--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
 
-<script src="js/commentify.js"></script>
+<script src="js/commentify.min.js"></script>
 <script type="application/javascript">
     $('#commentify').commentify({
         pageCount: 8,
